[package]
name = "ff-cl-gen"
version = "0.2.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL code generator for prime-fields"
documentation = "https://docs.rs/ff-cl-gen"
edition = "2018"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff-cl-gen"

[dependencies]
itertools = { version = "0.8.0" }
num-bigint = "0.2"
#pairing = {package = "pairing_ce", version = "0.24.*" }
pairing = { package = "pairing_opt", git = "https://github.com/skipjack8/pairing_opt", branch="master" }
rand = "0.7"

[dev-dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
#paired = { version = "0.18.0" }
lazy_static = "1.2"
