[package]
name = "ff-cl-gen"
version = "0.2.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL code generator for prime-fields"
documentation = "https://docs.rs/ff-cl-gen"
edition = "2018"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff-cl-gen"

[dependencies]
itertools = { version = "0.8.0" }
num-bigint = "0.2"
ff = { git = 'https://github.com/starslabhq/ff', branch = "v0.11.1Char"}
pairing = { git = 'https://github.com/starslabhq/pairing', package = "pairing_bn256", branch = "primeFieldChar"}

[dev-dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
rand = "0.7"
lazy_static = "1.2"
